# macroquad-tiled-redux

./: .gitmodules  Cargo.toml  readme.md
assets/: horse.tsx  horse.txt  tiled_base64_zlib.tmx  uLPC-drake.png.bak  uLPC-drake.tsx  uLPC-drake.txt
assets/grass/: grass_biome.tsx  map1.tmx  overworld-grass-biome.txt
examples/: animated.rs  demo1.rs  ortho_map_static.rs  ortho_tileset_animated.rs  ortho_tileset_static.rs
examples/step/: main.rs
examples/walkie/: animation_controller.rs  main.rs
src/: animation.rs  animation_controller.rs  layer_order.rs  lib.rs  map.rs  tileset.rs
