[package]
name = "macroquad-tiled-redux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "^0.3.13"
tiled = "^0.9.5"
coarsetime = "^0.1.20"

[patch.crates-io]
tiled = { git = "https://github.com/singalen/rs-tiled.git", branch = "master" }
#tiled = { path = "depends/rs-tiled" }
