[package]
name = "macroquad-tiled-redux"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { verstion = "^0.3.10" }
# No zstd, for wasm
tiled = { version = "^0.9.5", default-features = false }
coarsetime = "^0.1.20"

[patch.crates-io]
tiled = { git = "https://github.com/singalen/rs-tiled.git", branch = "master" }
#tiled = { path = "depends/rs-tiled" }
